# run

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  setup.py  setup_env.sh  test_qt.py  viewer.py
svg_viewer/: __init__.py  __main__.py
tests/: conftest.py  test_svg_viewer.py
